--- a/Plotly.Rmd
+++ b/Plotly.Rmd
@@ -7,3 +7,89 @@ output:
 ---
 
 ## Examples of Plotly
+
+We're gonna look at the NYC airbnb data
+
+```{r}
+library(tidyverse)
+library(plotly)
+
+library(p8105.datasets)
+```
+
+
+```{r}
+data("nyc_airbnb")
+
+nyc_airbnb =
+  nyc_airbnb |> 
+  mutate(rating = review_scores_location / 2) |> 
+  select(neighbourhood_group, neighbourhood, rating, price, room_type, lat, long) |> 
+  filter(
+    neighbourhood_group == "Manhattan",
+    price %in% 100:500,
+    room_type == "Entire home/apt"
+  ) |> 
+  drop_na(rating)
+```
+
+
+#Plotly plots
+
+##scatterplots
+
+
+```{r}
+nyc_airbnb |> 
+  mutate(text_label = str_c("Price: $", price, "\nRating:", rating)) |> 
+  plot_ly(
+    x = ~lat, y = ~long, color = ~price, text = ~text_label,
+    alpha = .5, type = "scatter", mode = "markers")
+```
+
+
+## Boxplot
+```{r}
+nyc_airbnb |> 
+  mutate(neighbourhood = fct_reorder(neighbourhood, price)) |> 
+  plot_ly(
+    y = ~price, x = ~neighbourhood, color = ~neighbourhood,
+    type = "box", colors = "viridis")
+```
+
+
+## bar plot
+
+```{r}
+nyc_airbnb |> 
+  count(neighbourhood) |> 
+  mutate(neighbourhood = fct_reorder(neighbourhood, n)) |> 
+  plot_ly(
+    x = ~neighbourhood, y = ~n, color = ~neighbourhood,
+    type = "bar", colors = "viridis")
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
